<resources>
    <string name="app_name">Pandora</string>
    <string name="username_hint_text">Username</string>
    <string name="password_hint_text">Password</string>
    <string name="login_btn_text">Sign In</string>
    <string name="cofmat_icon_desc" />

    <string name="empty_user">Please Enter a Username</string>
    <string name="empty_pass">Please Enter a Password</string>

    <string name="showOrders">Show Orders</string>

    <string name="categories">Categories</string>
    <string name="quantity">Quantity</string>
    <string name="name">Name</string>
    <string name="Price">Price</string>
    <string name="blank"></string>
    <string name="food_desc">Food category</string>
    <string name="beverage_desc">Beverage category</string>
    <string name="archery_desc">Archery category</string>
    <string name="totalPrice">Total:</string>
    <string name="sendOrder">Send</string>
    <string name="cancelOrder">Clear</string>
    <string name="logo">Pandora</string>
    <string name="orderListHeader">Order List</string>
    <string name="action_favorite">favorite</string>
    <string name="logout">Logout</string>
    <string name="login_text">Login</string>
    <string name="queue_title">Queue Orders</string>
    <string name="currentOrder_title">Current Orders</string>
    <string name="finishedOrder_title">Finished Orders</string>
    <string name="popup_cancel_text">Cancel</string>
    <string name="popup_confirm_text">Confirm</string>

    <item name="visible" type="id"/>
    <item name="masked" type="id"/>
</resources>
