<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <EditText
        android:layout_width="450dp"
        android:layout_height="80dp"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/usernameET"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="72dp"
        app:layout_constraintTop_toBottomOf="@+id/cofMatIconIV"
        android:hint="@string/username_hint_text" />

    <EditText
        android:layout_width="450dp"
        android:layout_height="80dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/passwordET"
        android:hint="@string/password_hint_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@+id/usernameET"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <Button
        android:text="@string/login_btn_text"
        android:layout_width="342dp"
        android:layout_height="92dp"
        android:id="@+id/loginBtn"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:layout_marginTop="88dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordET"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.0"
        android:background="@color/colorPrimaryDark" />

    <ImageView
        android:layout_width="314dp"
        android:layout_height="286dp"
        app:srcCompat="@drawable/icon"
        android:id="@+id/cofMatIconIV"
        android:layout_marginTop="88dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:contentDescription="@string/cofmat_icon_desc" />

</android.support.constraint.ConstraintLayout>
