<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="416dp"
        android:layout_height="115dp"
        tools:layout_editor_absoluteY="508dp"
        tools:layout_editor_absoluteX="8dp">


        <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button11" />

        <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button9"
            android:layout_row="0"
            android:layout_column="1" />

        <Button
            android:text="Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_row="0"
            android:layout_column="2" />
    </GridLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="584dp"
        android:layout_height="150dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="432dp"
        android:id="@+id/categories_menu">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="2"
            android:columnCount="4"

            >

            <Button
                android:text="@string/categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button18"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"/>

            <Button
                android:text="@string/categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button20"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"/>

            <Button
                android:text="@string/categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button21"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                />

            <Button
                android:text="@string/categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button19"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"
                />

            <Button
                android:text="@string/categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button1"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1" />

            <Button
                android:text="@string/categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_rowWeight="1"/>


        </GridLayout>
    </LinearLayout>

    <GridLayout
        android:layout_width="584dp"
        android:layout_height="457dp"
        tools:layout_editor_absoluteY="166dp"
        tools:layout_editor_absoluteX="432dp"
        android:id="@+id/display_menu"
        android:rowCount="3"
        android:columnCount="4"
        >

        <FrameLayout
            android:layout_row="0"
            android:layout_column="0"
            android:layout_width="144dp"
            android:layout_height="140dp"

            >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/burger"
                android:id="@+id/imageButton103"
                android:layout_gravity="center" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:foregroundGravity="fill_vertical"
                android:layout_gravity="top|left|center" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_gravity="bottom|center" />

        </FrameLayout>

        <FrameLayout
            android:layout_row="0"
            android:layout_column="1"
            android:layout_width="144dp"
            android:layout_height="140dp"
            >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/burger"
                android:id="@+id/imageButton104"
                android:layout_gravity="center" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:foregroundGravity="fill_vertical"
                android:layout_gravity="top|left|center" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:layout_gravity="bottom|center" />

        </FrameLayout>

        <FrameLayout
            android:layout_row="0"
            android:layout_column="2"
            android:layout_width="144dp"
            android:layout_height="140dp"
            >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/burger"
                android:id="@+id/imageButton105"
                android:layout_gravity="center" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:foregroundGravity="fill_vertical"
                android:layout_gravity="top|left|center" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_gravity="bottom|center" />

        </FrameLayout>

        <FrameLayout
            android:layout_row="0"
            android:layout_column="3"
            android:layout_width="144dp"
            android:layout_height="140dp"
            >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/burger"
                android:id="@+id/imageButton106"
                android:layout_gravity="center" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:foregroundGravity="fill_vertical"
                android:layout_gravity="top|left|center" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:layout_gravity="bottom|center" />

        </FrameLayout>

        <FrameLayout
            android:layout_row="1"
            android:layout_column="0"
            android:layout_width="144dp"
            android:layout_height="140dp"
            >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/burger"
                android:id="@+id/imageButton107"
                android:layout_gravity="center" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView12"
                android:foregroundGravity="fill_vertical"
                android:layout_gravity="top|left|center" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView13"
                android:layout_gravity="bottom|center" />

        </FrameLayout>

        <FrameLayout
            android:layout_row="2"
            android:layout_column="0"
            android:layout_width="144dp"
            android:layout_height="140dp"
            >

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/burger"
                android:id="@+id/imageButton108"
                android:layout_gravity="center" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView14"
                android:foregroundGravity="fill_vertical"
                android:layout_gravity="top|left|center" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView15"
                android:layout_gravity="bottom|center" />

        </FrameLayout>
    </GridLayout>

    <GridLayout
        android:layout_width="416dp"
        android:layout_height="53dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp"
        android:rowCount="1"
        android:columnCount="4"
        android:id="@+id/order_header">

        <TextView
            android:text="@string/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView16"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView19"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>

        <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView17"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>

        <TextView
            android:text="@string/Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView18"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    </GridLayout>

    <ScrollView
        android:layout_width="416dp"
        android:layout_height="431dp"
        tools:layout_editor_absoluteY="69dp"
        tools:layout_editor_absoluteX="8dp"
        tools:ignore="MissingConstraints">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="1"
            android:columnCount="4"
            android:id="@+id/orders_layout">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView22"
                android:layout_row="0"
                android:layout_column="2"
                android:layout_columnWeight="1"/>

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/numberPicker2"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:gravity="top|left" />

            <TextView
                android:text="Burger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView21"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1" />

            <TextView
                android:text="50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView23"
                android:layout_row="0"
                android:layout_column="3"
                android:layout_columnWeight="1" />
        </GridLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>